--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "/public/build"
   ],
   "dependencies": {
+    "@mantine/core": "^7.1.7",
+    "@mantine/hooks": "^7.1.7",
     "@prisma/client": "^4.16.2",
     "@remix-run/css-bundle": "^2.2.0",
     "@remix-run/node": "^2.2.0",
@@ -71,6 +73,8 @@
     "msw": "^1.3.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.9.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "prisma": "^4.16.2",
