--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "isbot": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "slug": "^8.2.3",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "@types/node": "^18.18.6",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "@types/slug": "^5.0.6",
     "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-react": "^4.1.0",
