--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "isbot": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "slug": "^8.2.3",
     "tiny-invariant": "^1.3.1"
   },
